--- a/sample-mono/pom.xml
+++ b/sample-mono/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>net.osgiliath.datamigrator</groupId>
         <artifactId>data-migrator</artifactId>
-        <version>1.22-SNAPSHOT</version>
+        <version>1.23-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <groupId>net.osgiliath.datamigrator.sample</groupId>
@@ -274,38 +274,6 @@
                         </configuration>
                     </plugin>
                     <plugin>
-                        <groupId>com.google.code.maven-replacer-plugin</groupId>
-                        <artifactId>replacer</artifactId>
-                        <executions>
-                            <execution>
-                                <phase>generate-sources</phase>
-                                <goals>
-                                    <goal>replace</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                        <configuration>
-                            <basedir>${project.build.directory}/generated-sources/entities</basedir>
-                            <includes>
-                                <include>**/*.java</include>
-                            </includes>
-                            <replacements>
-                                <replacement>
-                                    <token>, nullable=false</token>
-                                    <value></value>
-                                </replacement>
-                                <replacement>
-                                    <token>, updatable=false</token>
-                                    <value></value>
-                                </replacement>
-                                <replacement>
-                                    <token>, insertable=false</token>
-                                    <value></value>
-                                </replacement>
-                            </replacements>
-                        </configuration>
-                    </plugin>
-                    <plugin>
                         <groupId>org.hibernate.orm.tooling</groupId>
                         <artifactId>hibernate-enhance-maven-plugin</artifactId>
                     </plugin>
@@ -325,24 +293,6 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-antrun-plugin</artifactId>
-                        <version>3.1.0</version>
-                        <executions>
-                            <execution>
-                                <phase>generate-sources</phase>
-                                <configuration>
-                                    <target>
-                                        <mkdir dir="${project.build.directory}/generated-sources/repositories"/>
-                                        <move todir="${project.build.directory}/generated-sources/repositories">
-                                            <fileset dir="${project.basedir}/src/main/java"
-                                                     includes="**/repository/*.java"/>
-                                        </move>
-                                    </target>
-                                </configuration>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                            </execution>
-                        </executions>
                     </plugin>
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
@@ -601,38 +551,6 @@
                         </dependencies>
                     </plugin>
                     <plugin>
-                        <groupId>com.google.code.maven-replacer-plugin</groupId>
-                        <artifactId>replacer</artifactId>
-                        <executions>
-                            <execution>
-                                <phase>generate-sources</phase>
-                                <goals>
-                                    <goal>replace</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                        <configuration>
-                            <basedir>${project.build.directory}/generated-sources/entities</basedir>
-                            <includes>
-                                <include>**/*.java</include>
-                            </includes>
-                            <replacements>
-                                <replacement>
-                                    <token>, nullable=false</token>
-                                    <value></value>
-                                </replacement>
-                                <replacement>
-                                    <token>, updatable=false</token>
-                                    <value></value>
-                                </replacement>
-                                <replacement>
-                                    <token>, insertable=false</token>
-                                    <value></value>
-                                </replacement>
-                            </replacements>
-                        </configuration>
-                    </plugin>
-                    <plugin>
                         <groupId>org.hibernate.orm.tooling</groupId>
                         <artifactId>hibernate-enhance-maven-plugin</artifactId>
                     </plugin>
@@ -650,24 +568,8 @@
                         </executions>
                     </plugin>
                     <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-antrun-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <phase>generate-sources</phase>
-                                <configuration>
-                                    <target>
-                                        <mkdir dir="${project.build.directory}/generated-sources/repositories"/>
-                                        <move todir="${project.build.directory}/generated-sources/repositories">
-                                            <fileset dir="${project.basedir}/src/main/java"
-                                                     includes="**/repository/*.java"/>
-                                        </move>
-                                    </target>
-                                </configuration>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                            </execution>
-                        </executions>
                     </plugin>
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
