MBI: add sample SGBD props

--- a/datamigrator-archetype/src/main/resources/archetype-resources/database.properties
+++ b/datamigrator-archetype/src/main/resources/archetype-resources/database.properties
@@ -17,19 +17,24 @@
 # limitations under the License.
 # #L%
 ###
+############################
+## SOURCE 
+############################
 #source.database.driver = org.h2.Driver
 #source.database.driver = org.postgresql.Driver
 #source.database.driver = org.mariadb.jdbc.Driver
 #source.database.driver = oracle.jdbc.OracleDriver
-source.database.driver=com.mysql.cj.jdbc.Driver
-# TODO sample and libraries to import for sqlserver and oracle
+#source.database.driver = com.microsoft.sqlserver.jdbc.SQLServerDriver
+source.database.driver = com.mysql.cj.jdbc.Driver
 source.database.port=3306
 #source.database.port = 5432
 source.database.baseurl=jdbc:mysql://127.0.0.1:${source.database.port}
-#source.database.baseurl = jdbc:h2:file:${project.build.directory}/h2db/db/pmi
-#source.database.baseurl = jdbc:postgresql://127.0.0.1:${source.database.port}/database
+#source.database.baseurl = jdbc:postgresql://127.0.0.1:${source.database.port}
+#source.database.baseurl = jdbc:oracle:thin:@//127.0.0.1:${source.database.port}
+#source.database.baseurl = jdbc:sqlserver://127.0.0.1:${source.database.port}
 source.database.options=zeroDateTimeBehavior=convertToNull
 source.datasource.defaultSchemaName=test
+#source.database.url = jdbc:h2:file:${project.build.directory}/h2db/db/pmi
 source.database.url=${source.database.baseurl}/${source.datasource.defaultSchemaName}?${source.database.options}
 source.datasource.username=test
 source.datasource.password=test
@@ -38,18 +43,25 @@ source.datasource.password=test
 #source.jdbc.dialect = org.hibernate.dialect.PostgreSQLDialect
 #source.jdbc.dialect = org.hibernate.dialect.OracleDialect
 #source.jdbc.dialect = org.hibernate.dialect.SQLServer2012Dialect
-source.jdbc.dialect=org.hibernate.dialect.MySQLDialect
+source.jdbc.dialect = org.hibernate.dialect.MySQLDialect
+
+############################
+## TARGET 
+############################
 #target.database.driver = org.h2.Driver
 #target.database.driver = org.postgresql.Driver
 #target.database.driver = org.mariadb.jdbc.Driver
 #target.database.driver = oracle.jdbc.OracleDriver
+#target.database.driver = com.microsoft.sqlserver.jdbc.SQLServerDriver
 target.database.driver=com.mysql.cj.jdbc.Driver
-#target.database.url = jdbc:h2:file:${project.build.directory}/h2db/db/pmi
-#target.database.url = jdbc:postgresql://localhost:5432/database
-#target.database.url = jdbc:mysql://localhost:3306/test?serverTimezone=UTC
-target.database.baseurl=jdbc:mysql://localhost:65108
+target.database.port=3306
+#target.database.baseurl = jdbc:postgresql://127.0.0.1:${source.database.port}
+#target.database.baseurl = jdbc:oracle:thin:@//127.0.0.1:${source.database.port}
+#target.database.baseurl = jdbc:sqlserver://127.0.0.1:${source.database.port}
+target.database.baseurl=jdbc:mysql://127.0.0.1:${target.database.port}
 target.database.options=zeroDateTimeBehavior=convertToNull
 target.datasource.defaultSchemaName=test
+#target.database.url = jdbc:h2:file:${project.build.directory}/h2db/db/pmi
 target.database.url=${target.database.baseurl}/${target.datasource.defaultSchemaName}?${target.database.options}
 target.datasource.username=test
 target.datasource.password=test
