--- a/datamigrator-archetype/src/main/resources/archetype-resources/src/main/resources/hibernate.properties
+++ b/datamigrator-archetype/src/main/resources/archetype-resources/src/main/resources/hibernate.properties
@@ -18,7 +18,7 @@
 # #L%
 ###
 hibernate.connection.driver_class=@source.database.driver@
-hibernate.connection.url=@source.database.baseurl@
+hibernate.connection.url=@source.database.url@
 hibernate.connection.username=@source.datasource.username@
 hibernate.connection.password=@source.datasource.password@
 hibernate.default_schema=@source.datasource.defaultSchemaName@
