--- a/datamigrator-archetype/src/main/resources/archetype-resources/database.properties
+++ b/datamigrator-archetype/src/main/resources/archetype-resources/database.properties
@@ -29,7 +29,7 @@ source.database.driver = com.mysql.cj.jdbc.Driver
 source.database.port=3306
 #source.database.port = 5432
 source.database.baseurl=jdbc:mysql://127.0.0.1:${source.database.port}
-#source.database.baseurl = jdbc:postgresql://127.0.0.1:${source.database.port}
+#source.database.baseurl = jdbc:postgresql://127.0.0.1:${source.database.port}/database
 #source.database.baseurl = jdbc:oracle:thin:@//127.0.0.1:${source.database.port}
 #source.database.baseurl = jdbc:sqlserver://127.0.0.1:${source.database.port}
 source.database.options=zeroDateTimeBehavior=convertToNull
@@ -55,7 +55,7 @@ source.jdbc.dialect = org.hibernate.dialect.MySQLDialect
 #target.database.driver = com.microsoft.sqlserver.jdbc.SQLServerDriver
 target.database.driver=com.mysql.cj.jdbc.Driver
 target.database.port=3306
-#target.database.baseurl = jdbc:postgresql://127.0.0.1:${source.database.port}
+#target.database.baseurl = jdbc:postgresql://127.0.0.1:${source.database.port}/database
 #target.database.baseurl = jdbc:oracle:thin:@//127.0.0.1:${source.database.port}
 #target.database.baseurl = jdbc:sqlserver://127.0.0.1:${source.database.port}
 target.database.baseurl=jdbc:mysql://127.0.0.1:${target.database.port}
