--- a/datamigrator-archetype/src/main/resources/archetype-resources/database.properties
+++ b/datamigrator-archetype/src/main/resources/archetype-resources/database.properties
@@ -55,9 +55,9 @@ source.jdbc.dialect = org.hibernate.dialect.MySQLDialect
 #target.database.driver = com.microsoft.sqlserver.jdbc.SQLServerDriver
 target.database.driver=com.mysql.cj.jdbc.Driver
 target.database.port=3306
-#target.database.baseurl = jdbc:postgresql://127.0.0.1:${source.database.port}/database
-#target.database.baseurl = jdbc:oracle:thin:@//127.0.0.1:${source.database.port}
-#target.database.baseurl = jdbc:sqlserver://127.0.0.1:${source.database.port}
+#target.database.baseurl = jdbc:postgresql://127.0.0.1:${target.database.port}/database
+#target.database.baseurl = jdbc:oracle:thin:@//127.0.0.1:${target.database.port}
+#target.database.baseurl = jdbc:sqlserver://127.0.0.1:${target.database.port}
 target.database.baseurl=jdbc:mysql://127.0.0.1:${target.database.port}
 target.database.options=zeroDateTimeBehavior=convertToNull
 target.datasource.defaultSchemaName=test
