add consistent key value

--- a/sample-mono/src/test/resources/application.yml
+++ b/sample-mono/src/test/resources/application.yml
@@ -30,6 +30,7 @@ data-migrator:
       entity-class: Employee
       column-transformation-definitions:
         - column-name: firstName
+          consistent-key: True
           options:
             - faker: dragon_ball.characters
     - name: anonymizer-custom-1
