--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
-sonar.projectKey=datamigrator
+sonar.projectKey=OsgiliathEnterprise_data-migrator
 sonar.projectName=Data migrator project
 sonar.projectVersion=1.0
 sonar.issue.ignore.multicriteria=S125
-sonar.issue.ignore.multicriteria.S125.resourceKey=src/main/java/**/*
+sonar.issue.ignore.multicriteria.S125.resourceKey=**/*
 sonar.issue.ignore.multicriteria.S125.ruleKey=xml:S125
