--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -42,12 +42,12 @@ jobs:
       - name: Test the sample
         id: test
         run: |
-          ./mvnw install && cd sample-mono && ./mvnw install -Pentities-from-changelog
+          ./mvnw install -pl -report-aggregate && cd sample-mono && ./mvnw install -Pentities-from-changelog
       - name: Sonar
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./mvnw -B org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=OsgiliathEnterprise_data-migrator
+        run: ./mvnw -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=OsgiliathEnterprise_data-migrator
       - name: Verify Whether a Release is Ready
         id: release
         shell: bash
