add coverage profile

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,15 +39,11 @@ jobs:
         with:
           gpg_private_key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
           passphrase: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
-      - name: Test the sample
-        id: test
-        run: |
-          ./mvnw install -pl -report-aggregate && cd sample-mono && ./mvnw install -Pentities-from-changelog
-      - name: Sonar
+      - name: Build, test and report
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./mvnw -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=OsgiliathEnterprise_data-migrator
+        run: ./mvnw -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Pentities-from-changelog,coverage -Dsonar.projectKey=OsgiliathEnterprise_data-migrator
       - name: Verify Whether a Release is Ready
         id: release
         shell: bash
