--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,6 @@
         <module>modules</module>
         <module>core</module>
         <module>datamigrator-archetype</module>
-        <module>report-aggregate</module>
     </modules>
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
@@ -89,12 +88,6 @@
         <maven-failsafe-plugin.version>3.2.5</maven-failsafe-plugin.version>
         <querydsl.version>5.1.0</querydsl.version>
         <jpa.domain.package>${project.groupId}.${project.artifactId}.domain</jpa.domain.package>
-        <sonar-maven-plugin.version>3.11.0.3922</sonar-maven-plugin.version>
-        <sonar.organization>osgiliathenterprise</sonar.organization>
-        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-        <sonar.coverage.jacoco.xmlReportPaths>
-            ${project.basedir}/report-aggregate/target/site/jacoco-aggregate/jacoco.xml
-        </sonar.coverage.jacoco.xmlReportPaths>
     </properties>
     <build>
         <pluginManagement>
@@ -462,14 +455,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
             </plugin>
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.sonarsource.scanner.maven</groupId>
-                <artifactId>sonar-maven-plugin</artifactId>
-            </plugin>
         </plugins>
     </build>
     <profiles>
@@ -491,6 +476,33 @@
                     </plugin>
                 </plugins>
             </build>
+        </profile>
+        <profile>
+            <id>coverage</id>
+            <properties>
+                <sonar-maven-plugin.version>3.11.0.3922</sonar-maven-plugin.version>
+                <sonar.organization>osgiliathenterprise</sonar.organization>
+                <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+                <sonar.coverage.jacoco.xmlReportPaths>
+                    ${project.basedir}/report-aggregate/target/site/jacoco-aggregate/jacoco.xml
+                </sonar.coverage.jacoco.xmlReportPaths>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.sonarsource.scanner.maven</groupId>
+                        <artifactId>sonar-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+            <modules>
+                <module>bom</module>
+                <module>modules</module>
+                <module>core</module>
+                <module>datamigrator-archetype</module>
+                <module>sample-mono</module>
+                <module>report-aggregate</module>
+            </modules>
         </profile>
     </profiles>
     <organization>
